# discord.py-i18n-demo

./: .git-blame-ignore-revs  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  pyright.yml
docs/: onboarding.md
docs/en/: onboarding.md
src/dpygt/: README.md  __init__.py  __main__.py  bot.py  config.py  config_default.toml  dpygt.pot  translator.py
src/dpygt/cogs/: README.md  choices.py  dice.py  owner.py  random.py  rps.py
src/dpygt/locales/en_US/LC_MESSAGES/: dpygt.po
src/dpygt/locales/fr/LC_MESSAGES/: dpygt.po
src/dpygt/locales/fr_FR/LC_MESSAGES/: dpygt.po
utils/: README.md  build_mo.py  init_pot.py  merge_po.py
