[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "discord.py-i18n-demo"
description = "A demonstration of handling internationalization with discord.py."
requires-python = ">=3.11"
authors = [{ name = "thegamecracks" }]
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "discord.py~=2.3",
    "pydantic~=2.0",
]

[project.optional-dependencies]
dev = ["black>=23.7.0"]
jishaku = ["jishaku @ git+https://github.com/Gorialis/jishaku@4590932f56a0e5a33b15d1c536955d4898d6b04e"]

[tool.setuptools_scm]

[tool.pyright]
typeCheckingMode = "standard"
